fix burger menu icon color on mobile view

--- a/src/app/layouts/styles.scss
+++ b/src/app/layouts/styles.scss
@@ -48,8 +48,8 @@
 }
 
 .navbar {
-    &__dark { background: #1E1F1E; }
-    &__light { background: #3E3F3E; }
+    &__dark { background: #212120; }
+    &__light { background: #414241; }
 }
 
 .padding {
